third_party/rust/chromium_crates_io/vendor/cxx-1.0.119/tests/ui/rust_pinned.stderr
error[E0277]: `PhantomPinned` cannot be unpinned
  --> tests/ui/rust_pinned.rs:6:14
   |
6  |         type Pinned;
   |              ^^^^^^ within `Pinned`, the trait `Unpin` is not implemented for `PhantomPinned`, which is required by `Pinned: Unpin`
   |
   = note: consider using the `pin!` macro
           consider using `Box::pin` if you need to access the pinned value outside of the current scope
note: required because it appears within the type `Pinned`
  --> tests/ui/rust_pinned.rs:10:12
   |
10 | pub struct Pinned {
   |            ^^^^^^
note: required by a bound in `__AssertUnpin`
  --> tests/ui/rust_pinned.rs:6:9
   |
6  |         type Pinned;
   |         ^^^^^^^^^^^^ required by this bound in `__AssertUnpin`
